# DanceMonkey

./: .env.example  .gitignore  README.md  azure.yaml
.github/workflows/: azure-deploy.yml
.github/workflows/tmp/: azure-deploy.yml
backend/: entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_main.py
backend/tests/local/: conftest.py
backend/tests/smoke/: conftest.py
docs/: api.md  architecture.md  deployment.md
infra/: main.bicep  main.test.bicep
infra/core/ai/: machinelearning.bicep
infra/core/host/: appservice.bicep  staticwebapp.bicep
infra/core/monitor/: monitoring.bicep
infra/core/security/: keyvault.bicep  role.bicep
infra/core/storage/: storage-account.bicep
